# imapsprayer

./: .gitignore  README.md  imapsprayer.py  passwords.txt  pyproject.toml  requirements.txt  users.txt
core/: __init__.py
core/common/: socksimap.py
core/sprayer/: imap.py
core/utils/: helpers.py  messages.py
core/webhooks/: __init__.py  slack.py
